# clinical-research-mcp

./: README.md  README_ko.md  pyproject.toml  server.py  setup_wizard.py
core/: arxiv.py  pubmed.py  trials.py  wikipedia.py
