[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-research-mcp"
version = "0.1.0"
description = "MCP server for clinical research — PubMed papers, clinical trials, medical concepts. No API key needed."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
clinical-research-mcp = "server:main"
